fixed navbar collapse to close on click

--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -92,7 +92,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  top: 10em;
+  top: 30vh;
 }
 .app-loading p {
   display: block;
